--- a/public/assets/html/404.html
+++ b/public/assets/html/404.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/css/404.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/404.css">
 </head>
 <body>
     <h1>Page Not Found</h1>
