--- a/public/assets/html/500.html
+++ b/public/assets/html/500.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed:100,200,300,400" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/css/500.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/500.css">
   <!-- <link href="style.css" rel="stylesheet"> -->
   <title>Document</title>
 </head>
